...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7zV-2I-ZEH">
                                                    <rect key="frame" x="333" y="0.0" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="vlg-aC-6gM"/>
                                                        <constraint firstAttribute="height" constant="44" id="vlq-GM-0al"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
                                    <constraint firstAttribute="height" constant="60" id="pzU-ud-0IH"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNJ-iN-Tzt">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Kc5-0u-SMD"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
                            <constraint firstAttribute="trailing" secondItem="5ZX-sS-yUQ" secondAttribute="trailing" id="ygN-eI-MHc"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="8OQ-CA-6C3"/>
                    <connections>
                        <outlet property="progressView" destination="ZM4-dq-gzT" id="c0h-aT-SBY"/>
                        <outlet property="webView" destination="5ZX-sS-yUQ" id="h9q-zF-ZUO"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mtK-Pa-yth" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="973" y="-1596"/>
        </scene>
...
